--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -14,4 +14,5 @@ jobs:
           # Change reporter level if you need.
           # GitHub Status Check won't become failure with warning.
           level: error
+          fail_on_error: true
           glob_pattern: "**/*.py"
