--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -10,11 +10,10 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-          reporter: github-pr-review
+          reporter: github-pr-check
           # Change reporter level if you need.
           # GitHub Status Check won't become failure with warning.
           level: error
           fail_on_error: true
           glob_pattern: "**/*.py"
           pylint_rc: ./.pylintrc
-          reporter: github-pr-review
