--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -17,3 +17,4 @@ jobs:
           fail_on_error: true
           glob_pattern: "**/*.py"
           pylint_rc: ./.pylintrc
+          filter_mode: nofilter
