--- a/.pylintrc
+++ b/.pylintrc
@@ -385,7 +385,12 @@ analyse-fallback-blocks=no
 overgeneral-exceptions=Exception
 
 [STRING_QUOTES]
-# Set the linting for string quotes
-string-quote=single
-triple-quote=double
+
+# The quote character for triple-quoted docstrings.
 docstring-quote=double
+
+# The quote character for string literals.
+string-quote=single
+
+# The quote character for triple-quoted strings (non-docstring).
+triple-quote=double
