--- a/.pylintrc
+++ b/.pylintrc
@@ -384,7 +384,7 @@ analyse-fallback-blocks=no
 # "Exception"
 overgeneral-exceptions=Exception
 
-[STRING]
+[STRING_QUOTES]
 
 # The quote character for triple-quoted docstrings.
 docstring-quote=double
