--- a/.pylintrc
+++ b/.pylintrc
@@ -199,14 +199,10 @@ indent-after-paren=4
 # Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
 expected-line-ending-format=
 
-# The quote character for triple-quoted docstrings.
-docstring-quote=double
-
-# The quote character for string literals.
+# Set the linting for string quotes
 string-quote=single
-
-# The quote character for triple-quoted strings (non-docstring).
 triple-quote=double
+docstring-quote=double
 
 
 [LOGGING]
