--- a/.pylintrc
+++ b/.pylintrc
@@ -243,18 +243,6 @@ spelling-private-dict-file=
 # --spelling-private-dict-file option instead of raising a message.
 spelling-store-unknown-words=no
 
-[STRING_QUOTES]
-
-# The quote character for triple-quoted docstrings.
-docstring-quote=double
-
-# The quote character for string literals.
-string-quote=single
-
-# The quote character for triple-quoted strings (non-docstring).
-triple-quote=double
-
-
 [TYPECHECK]
 
 # Tells whether missing members accessed in mixin class should be ignored. A
@@ -392,3 +380,14 @@ analyse-fallback-blocks=no
 # Exceptions that will emit a warning when being caught. Defaults to
 # "Exception"
 overgeneral-exceptions=Exception
+
+[STRING]
+
+# The quote character for triple-quoted docstrings.
+docstring-quote=double
+
+# The quote character for string literals.
+string-quote=single
+
+# The quote character for triple-quoted strings (non-docstring).
+triple-quote=double
