--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -17,12 +17,19 @@ jobs:
       #     fail_on_error: true
       #     glob_pattern: "**/*.py"
       #     filter_mode: nofilter
-      - uses: ricardochaves/python-lint@v1.3.0
+      # - uses: ricardochaves/python-lint@v1.3.0
+      #   with:
+      #     python-root-list: "python_alelo tests"
+      #     use-pylint: true
+      #     use-pycodestyle: false
+      #     use-flake8: false
+      #     use-black: false
+      #     use-mypy: false
+      #     use-isort: false
+      - uses: actions/setup-python@v1
         with:
-          python-root-list: "python_alelo tests"
-          use-pylint: true
-          use-pycodestyle: false
-          use-flake8: false
-          use-black: false
-          use-mypy: false
-          use-isort: false
+          python-version: 3.8
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+          pylint --rcfile=~/.pylintrc script/*.py
