--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -29,7 +29,8 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.8
-      - run:
-          python -m pip install --upgrade pip
-          pip install pylint
+      - name: "run"
+        run: |
+          python -m pip install --upgrade pip;
+          pip install pylint;
           pylint --rcfile=~/.pylintrc script/*.py
