--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -32,5 +32,5 @@ jobs:
       - name: "run"
         run: |
           python -m pip install --upgrade pip;
-          pip install pylint;
+          pip install pylint;pip install pylint-quotes;
           pylint --rcfile=./.pylintrc script/*.py
