--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -1,48 +1,17 @@
 name: reviewdog
 on: [pull_request]
 jobs:
-  pylint:
-    name: runner / pylint
-    runs-on: ubuntu-latest
+  check_tag:
+    name: check_tag
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
       - name: "run"
         run: |
           python -m pip install --upgrade pip;
           pip install pylint-quotes
 
-      - uses: dciborow/action-pylint@0.0.7
-        with:
-          github_token: ${{ secrets.github_token }}
-          # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-          reporter: github-pr-review
-          # Change reporter level if you need.
-          # GitHub Status Check won't become failure with warning.
-          level: error
-          fail_on_error: true
-          glob_pattern: "**/*.py"
-          filter_mode: nofilter
-
-  clang-format:
-    name: runner / clang-format
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: DoozyX/clang-format-lint-action@v0.15
-        with:
-          source: './cpp_src'
-          extensions: 'h,cpp'
-          clangFormatVersion: 10
-
-      # - uses: actions/setup-python@v1
-      #   with:
-      #     python-version: 3.8
-      # - name: "run"
-      #   run: |
-      #     python -m pip install --upgrade pip;
-      #     pip install pylint;pip install pylint-quotes;
-      #     pylint --rcfile=./.pylintrc script/*.py
+       - name: SSH Debug
+         if: ${{ always() }}
+         uses: mxschmitt/action-tmate@v3
