--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -3,7 +3,7 @@ on: [pull_request]
 jobs:
   check_tag:
     name: check_tag
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
