--- a/.github/workflows/watchdog.yml
+++ b/.github/workflows/watchdog.yml
@@ -3,7 +3,7 @@ on: [pull_request]
 jobs:
   check_tag:
     name: check_tag
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
 
@@ -12,6 +12,6 @@ jobs:
           python -m pip install --upgrade pip;
           pip install pylint-quotes
 
-       - name: SSH Debug
-         if: ${{ always() }}
-         uses: mxschmitt/action-tmate@v3
+      - name: SSH Debug
+        if: ${{ always() }}
+        uses: mxschmitt/action-tmate@v3
